components/python-ptzhwgfs/base/service.yaml
apiVersion: v1
kind: Service
metadata: 
  labels: 
    app.kubernetes.io/instance: python-ptzhwgfs
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/name: python-ptzhwgfs 
  name: python-ptzhwgfs
spec:
  ports:
  - port: 8081 
    targetPort: 8081 
  selector:
    app.kubernetes.io/instance: python-ptzhwgfs
