components/python-ptzhwgfs/base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata: 
  labels: 
    app.kubernetes.io/instance: python-ptzhwgfs
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/name: python-ptzhwgfs 
  name: python-ptzhwgfs
spec:
  port:
    targetPort: 8081 
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: python-ptzhwgfs
    weight: 100
